# progetto-gruppo-bardini-rremilli

./: clusters2.py  readme.md
18-08/: readme.md
18-08/student_manager/: __init__.py  config.py  main.py
18-08/workflows/: python-ci.yml
20-08/esercizio-1/: clustering.py  preprocessing.py
esercizio1/: .env.example  ARCHITECTURE.md  README.md  crewai_flow.html  math_crew_result.txt  poem_crew_result.txt  pyproject.toml  test_system.py
esercizio1/docs/source/: api_reference.rst  architecture.rst  conf.py  index.rst
esercizio1/src/esercizio1/: main.py
esercizio1/src/esercizio1/crews/math_crew/: math_crew.py
esercizio1/src/esercizio1/crews/math_crew/config/: agents.yaml  tasks.yaml
esercizio1/src/esercizio1/crews/math_text_crew/: math_text_crew.py
esercizio1/src/esercizio1/crews/math_text_crew/config/: agents.yaml  tasks.yaml
esercizio1/src/esercizio1/crews/rag_crew/: rag_crew.py
esercizio1/src/esercizio1/crews/rag_crew/config/: agents.yaml  tasks.yaml
esercizio1/src/esercizio1/routers/: main_router.py
esercizio1/src/esercizio1/tools/: custom_tool.py
student_manager/: __init__.py
student_manager/student_manager/: __init__.py  main.py  student_manager.py
