[project]
name = "esercizio1"
version = "0.1.0"
description = "esercizio1 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.165.1,<1.0.0",
]

[project.scripts]
kickoff = "esercizio1.main:kickoff"
run_crew = "esercizio1.main:kickoff"
plot = "esercizio1.main:plot"
demo_routing = "esercizio1.main:demo_routing"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
